--- a/00-M2-CS2B-ASI-July-2022/M2-Question2.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question2.Rmd
@@ -54,7 +54,7 @@ giving appropriate labels for each axis.
 
 ### Part A
 ```{r}
-Lung_Deaths <- read.csv("D:\\IAI Question Paper\\July 2022\\CS2B_Final\\Lung_
+Lung_Deaths <- read.csv("D:\\IAI ### Question  Paper\\July 2022\\CS2B_Final\\Lung_
 Deaths.csv")
 ```
 
