--- a/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.Rmd
+++ b/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.Rmd
@@ -13,7 +13,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-library(dplyr)
+#library(dplyr)
 library(janitor)
 library(scales)
 options(scipen = 2, digits = 3) #set to two decimal 
@@ -41,10 +41,16 @@ pre {
 
 * The annual aggregate claim amount of an insurer follows a compound Poisson 
 distribution with parameter 1,000. 
+
 * Individual claim amounts follow a Gamma 
 distribution with shape parameter $\alpha = 750$ and rate parameter $\lambda = 0.25$. 
 
+* The relevant exercises are on the next slide
+
 ---
+
+### Exercises
+
 1. Generate 20,000 simulated aggregate claim values for this insurer, using a 
 random number generator seed of 914. Use the R function, <tt>head()</tt>, to 
 display the first seven simulated claim values in your answer script. 
@@ -68,7 +74,21 @@ different coloured line in the chart that was produced in part 3.
 
 ---
 
-### Part 1
+### Exercise 1
+
+**Understanding the Problem:**
+
+We're dealing with a compound Poisson distribution, where:
+
+* **Primary process:** Poisson with rate λ = 1000, representing the number of claims.<p>
+* **Secondary process:** Gamma with shape α = 750 and rate λ = 0.25, representing individual claim amounts.<p>
+
+**Simulation:**
+  - We simulate the number of claims using a Poisson distribution.<p>
+  - For each claim, we simulate its amount using a Gamma distribution.<p>
+  - The total aggregate claim is the sum of all individual claim amounts.
+   
+   
 ```{r}
 set.seed(914) 
 n = rpois(20000, 1000) 
@@ -85,7 +105,7 @@ head(s, 7)
 
 ---
 
-### Part 1
+### Exercise 1
 
 #### Alternative Approach
 
@@ -102,7 +122,11 @@ head(s, 7)
 ```
 
 ---
-#### Part 2. 
+
+### Exercise 2. 
+
+**Mean and Standard Deviation:**
+   - We calculate the mean and standard deviation of the simulated aggregate claims.
 
 ```{r}
 mean(s) 
@@ -118,7 +142,7 @@ The standard deviation of the simulated claim values is `r comma(sd(s))`
 
 ---
 
-### Part 3. 
+### Exercise 3. 
 
 ```{r eval = FALSE}
 plot( 
@@ -131,7 +155,7 @@ plot(
 ```
 ---
 
-### Part 3. 
+### Exercise 3. 
 
 ```{r echo = FALSE}
 plot( 
@@ -144,9 +168,12 @@ plot(
 ```
 ---
 
-### Part 4.
+### Exercise 4.
 
 Suggest a suitable distribution, including its parameters, that approximates the simulated aggregate claim values
+
+* Given the shape of the Gamma distribution, a Normal distribution might be a good approximation for the aggregate claims.
+* We can use the mean and standard deviation calculated in exercise 2 as parameters for the Normal distribution.
 
 #### Normal distribution 
 
@@ -157,7 +184,7 @@ Suggest a suitable distribution, including its parameters, that approximates the
 
 ---
 
-#### Part 5.
+#### Exercise 5.
 
 20,000 values from your suggested distribution in part 4 using a 
 random number generator seed of 914.
@@ -170,7 +197,14 @@ head(approx_dist, 7)
 
 ---
 
-### Part 6.
+### Exercise 6.
+
+By comparing the two density functions, we can visually assess how well the Normal distribution approximates the compound Poisson distribution. 
+If the two distributions are close, the Normal approximation can be used for further calculations and risk analysis.
+
+---
+
+### Exercise 6.
 
 ```{r eval=FALSE}
 plot( 
@@ -193,7 +227,8 @@ Distribution"),
 
 ---
 
-### Part 6.
+### Exercise 6.
+
 
 
 ```{r echo=FALSE}
