--- a/00-V1-CS1B-FIA-2024-September/00-V1-Question-3.Rmd
+++ b/00-V1-CS1B-FIA-2024-September/00-V1-Question-3.Rmd
@@ -48,34 +48,37 @@ style_mono_accent_inverse(
 
 3 A random variable X with values in the interval [0,1] has the following Cumulative
 Distribution Function (CDF):
-𝐹􁈺𝑥􁈻 􀵌 1 􀵆 􁈺1 􀵆 𝑥􀯔􁈻􀯕, 𝑥 ∈ 􁈾0,1􁈿
+$$F(X) = 1 - (1-x^a)^b, x \in[0,1]$$
 and inverse CDF:
-𝐹􀬿􀬵􁈺𝑢􁈻 􀵌 􀵬1 􀵆 􁈺1 􀵆 𝑢􁈻
-􀬵
-􀯕􀵰
-􀬵􀯔
-where 𝑎 􀵐 0 and 𝑏 􀵐 0 are parameters. The Probability Density Function (PDF) is
+
+
+$$F^{-1}(u) = (1 - (1-u)^{frac{1}{b}})^{\frac{1}{a}}$$
+
+where a 􀵐 0 and b 􀵐 0 are parameters. The Probability Density Function (PDF) is
 then given by:
-𝑓􁈺𝑥􁈻 􀵌 𝑎𝑏𝑥􀯔􀬿􀬵􁈺1 􀵆 𝑥􀯔􁈻􀯕􀬿􀬵, 𝑥 ∈ 􁈾0,1􁈿
+
+$$f(x) = abx^{a-1}(1-x^a)^{b-1}, x \in[0,1]$$
+
 You do not need to check the form of the inverse CDF or PDF.
 
 Exercies
 
-(i) Plot the inverse CDF 𝐹􀬿􀬵􁈺𝑢􁈻 for an appropriate range of values of u when
+(i) Plot the inverse CDF $F^{-1}(u)$ for an appropriate range of values of u when
 a = 0.7 and b = 0.5. [5]
-􁈺ii􁈻 Simulate 1,000 values of X for a = 0.7 and b = 0.5 using the inverse transform
+
+(ii) Simulate 1,000 values of X for a = 0.7 and b = 0.5 using the inverse transform
 method and store the 1,000 simulated values in a vector in R for later use.
 
 You must use the command set.seed(123) to initialise the random
 number generator before you start the simulation. [3]
 (iii) Plot a histogram of the 1,000 simulated values obtained in part (ii) using
-relative frequencies. [2]
+relative frequencies. 
 (iv) Plot the PDF f(x) of X for a = 0.7 and b = 0.5 for values of 𝑥 ∈ 􁈾0,1􁈿. The
 graph of the PDF should be superimposed on the histogram produced in
 part (iii). 
 
 (v) Comment on the plot in part (iv) comparing the simulated values of X with the
-PDF, also taking into account the size of the simulated sample. [2]
+PDF, also taking into account the size of the simulated sample. 
 (vi) Plot the PDF f(x) of X for a = 0.7 and b = 0.5 for values of 𝑥 ∈ 􁈾0,1􁈿 in a new
 plot, and add the PDF f(x) for a = 3 and b = 2 to the same plot. [4]
 A statistician wants to use one of the PDFs in part (vi) as a prior density for a
@@ -84,3 +87,149 @@ Bayesian analysis.
 PDFs represent. 
 
 ---
+
+# (i) Plot the inverse CDF
+
+```{r}
+a <- 0.7
+b <- 0.5
+
+u <- seq(0, 1, length.out = 100)
+inv_cdf <- (1 - (1-u)^(1/b))^(1/a)
+plot(u, inv_cdf, type = "l", xlab = "u", ylab = "F^-1(u)", main = "Inverse CDF")
+```
+
+---
+
+```{r}
+# (ii) Simulate 1000 values
+set.seed(123)
+simulated_values <- (1 - runif(1000)^(1/b))^(1/a)
+```
+
+---
+
+```{r}
+# (iii) Plot histogram
+hist(simulated_values, prob = TRUE, main = "Histogram of Simulated Values")
+```
+
+---
+
+```{r}
+# (iv) Plot PDF and histogram
+x <- seq(0, 1, length.out = 100)
+pdf <- a*b*x^(a-1)*(1-x^a)^(b-1)
+lines(x, pdf, col = "red")
+```
+
+---
+
+```{r}
+# (v) Comment:
+# The histogram closely matches the theoretical PDF, indicating that the inverse transform method effectively generates samples from the desired distribution.
+# However, with a sample size of 1000, there's still some variability in the histogram, especially in the tails.
+```
+
+---
+
+```{r}
+# (vi) Plot two PDFs
+pdf1 <- a*b*x^(a-1)*(1-x^a)^(b-1)
+pdf2 <- 3*2*x^(3-1)*(1-x^3)^(2-1)
+plot(x, pdf1, type = "l", ylim = c(0, 3), main = "PDFs for Different Parameter Values")
+lines(x, pdf2, col = "red")
+```
+
+---
+
+```{r}
+# (vii) Comment:
+# The PDF with a = 0.7 and b = 0.5 is more concentrated towards 0, indicating a prior belief that the underlying parameter is likely to be small. 
+# The PDF with a = 3 and b = 2 is more uniform, suggesting a less informative prior, or a prior that places more weight on larger values of the parameter.
+```
+
+---
+
+
+**Part (iv): Superimposing PDF on Histogram**
+
+```{r}
+# ... (previous code)
+
+# Plot histogram with superimposed PDF
+hist(simulated_values, prob = TRUE, main = "Histogram and PDF")
+lines(x, pdf, col = "red", lwd = 2)
+```
+
+**Part (v): Comment on the Plot**
+
+The histogram and the superimposed PDF show a good match. This indicates that the simulated values are indeed drawn from the specified distribution. The simulated distribution closely follows the theoretical distribution, especially in the central region. However, there are some minor discrepancies, particularly in the tails, which are likely due to the finite sample size of 1000.
+
+As the sample size increases, the histogram would converge more closely to the theoretical PDF, reducing the variability in the tails.
+
+
+
+---
+
+
+**Understanding the Problem**
+
+We're tasked with:
+1. **Visualizing the Inverse CDF:** Plotting the inverse CDF for specific parameter values.
+2. **Simulating Data:** Generating random numbers from the distribution using the inverse transform method.
+3. **Visualizing the Distribution:** Plotting a histogram of the simulated data and overlaying the theoretical PDF.
+4. **Comparing PDFs:** Plotting two PDFs with different parameter values and interpreting their implications for Bayesian analysis.
+
+**R Code Implementation**
+
+```R
+# (i) Plot the inverse CDF
+a <- 0.7
+b <- 0.5
+
+u <- seq(0, 1, length.out = 100)
+inv_cdf <- (1 - (1-u)^(1/b))^(1/a)
+plot(u, inv_cdf, type = "l", xlab = "u", ylab = "F^-1(u)", main = "Inverse CDF")
+
+---
+
+# (ii) Simulate 1000 values
+set.seed(123)
+simulated_values <- (1 - runif(1000)^(1/b))^(1/a)
+
+
+# (iii) Plot histogram
+hist(simulated_values, prob = TRUE, main = "Histogram of Simulated Values")
+
+# (iv) Plot PDF and histogram
+x <- seq(0, 1, length.out = 100)
+pdf <- a*b*x^(a-1)*(1-x^a)^(b-1)
+lines(x, pdf, col = "red")
+
+---
+
+# (v) Comment:
+# The histogram closely matches the theoretical PDF, indicating that the inverse transform method effectively generates samples from the desired distribution.
+# However, with a sample size of 1000, there's still some variability in the histogram, especially in the tails.
+
+# (vi) Plot two PDFs
+pdf1 <- a*b*x^(a-1)*(1-x^a)^(b-1)
+pdf2 <- 3*2*x^(3-1)*(1-x^3)^(2-1)
+plot(x, pdf1, type = "l", ylim = c(0, 3), main = "PDFs for Different Parameter Values")
+lines(x, pdf2, col = "red")
+
+---
+
+# (vii) Comment:
+# The PDF with a = 0.7 and b = 0.5 is more concentrated towards 0, indicating a prior belief that the underlying parameter is likely to be small. 
+# The PDF with a = 3 and b = 2 is more uniform, suggesting a less informative prior, or a prior that places more weight on larger values of the parameter.
+```
+
+**Key Points:**
+- The inverse CDF is used to generate random numbers from the distribution.
+- The histogram visualizes the empirical distribution of the simulated data.
+- The PDF is the theoretical probability density function.
+- The two PDFs in part (vi) represent different prior beliefs about the parameter.
+
+By understanding these concepts and the R code implementation, you can delve deeper into statistical simulations and Bayesian analysis.
